src/objects/Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Available_Values__c</fullName>
        <inlineHelpText>Available values for a particular metric that users can choose from. Please have each value in a separate line.</inlineHelpText>
        <label>Available Values</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Call_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Care Call Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metrics_Question__c</fullName>
        <label>Metrics Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <label>Old Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Format__c</fullName>
        <inlineHelpText>The type of question format the user wants to have in the survey (e.g. Free Textbox, Multiple Choice, Rating, etc.).</inlineHelpText>
        <label>Question Format</label>
        <picklist>
            <picklistValues>
                <fullName>Free Textbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Choice (One Answer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Choice (Multiple Answers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeric Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Weight__c</fullName>
        <inlineHelpText>The number associate to the specific answer associated with this question. Please have each value in a separate line.</inlineHelpText>
        <label>Response Weight</label>
        <type>TextArea</type>
    </fields>
    <label>Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_Format__c</columns>
        <columns>Question__c</columns>
        <columns>Available_Values__c</columns>
        <columns>Response_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Metrics</fullName>
        <columns>NAME</columns>
        <columns>Question_Format__c</columns>
        <columns>Question__c</columns>
        <columns>Available_Values__c</columns>
        <columns>Response_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Metrics</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Metrics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>